apps/_template/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: APP_NAME
  ports:
    - name: http
      port: 80
      targetPort: http
