apps/_template/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME
spec:
  ingressClassName: nginx
  rules:
    - host: APP_NAME.godny.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: APP_NAME
                port:
                  name: http
